# ai-test2

./: .editorconfig  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  INSTRUCTIONS.md  aqua.yaml  compose.yaml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
apps/slack-bot/: Dockerfile  README.md  deploy.sh  function.json  pyproject.toml  requirements.txt
apps/slack-bot/lambroll/: function.json
apps/slack-bot/src/: lambda_function.py
apps/slack-bot/src/ai/: bedrock_client.py  strands_client.py
apps/slack-bot/src/config/: settings.py
apps/slack-bot/src/slack/: auth.py  handler.py  message_parser.py
apps/slack-bot/src/utils/: http_response.py
apps/slack-bot/tests/: test_http_response.py  test_lambda_function.py  test_message_parser.py  test_slack_auth.py
docs/development/: aws.md  python.md  terraform.md
docs/guides/: instructions.md
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/slack-bot/: main.tf  outputs.tf  variables.tf
