[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack Bot Lambda Function"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true