[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack Bot Lambda Function"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.19.0",
    "slack-sdk>=3.28.0",
    "boto3>=1.34.0",
    "strands-agents>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"